# weakLinkingPOC

./: CMakeLists.txt  README.md  lib.cpp  lib.hpp  main_default.cpp  main_overrided.cpp
